# GamePractice

./: .gitmodules  README.md
asteroids/: CMakeLists.txt  README.md  main.c
asteroids/include/: asteroids.h  bullets.h  collision.h  common.h  player.h  settings.h  ui.h
asteroids/lib/: CMakeLists.txt  asteroids.c  bullets.c  collision.c  common.c  player.c  settings.c  ui.c
pool/lib/: practice.c
simple_sdl_game/: .gitmodules  CMakeLists.txt  README.md  main.c
simple_sdl_game/include/: collision_detection.h  common.h  end_state.h  enemy.h  entity.h  gamestate.h  mainmenu_state.h  play_state.h  player.h  poop_manager.h
simple_sdl_game/lib/: CMakeLists.txt  collision_detection.c  common.c  end_state.c  enemy.c  entity.c  gamestate.c  mainmenu_state.c  play_state.c  player.c  poop_manager.c
tictactoe/: CMakeLists.txt  main.c
